Edited error with user input overflow

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="form-login__inner">
             <div class="custom-input">
                 <label class="custom-input__label visually-hidden" for="user-email">Имя</label>
-                <input class="custom-input__field" id="user-email" type="email" name="user-email" placeholder="Введите логин" required>
-                <span class="custom-input__icon custom-input__icon--user">
+                <input class="custom-input__field" id="user-email" type="eail" name="user-email" placeholder="Введите логин" required>
+                <span class="custom-input__icon custom-input__icon--muser">
                     <svg class="custom-input__svg" width="24" height="18" aria-hidden="true">
                         <use xlink:href="img/sprite/sprite.svg#user-icon"></use>
                     </svg>
