--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style2.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Практика позиционирования. Кейс 1.</title>
 </head>
@@ -33,6 +34,46 @@
         </div>
       <button class="form-login__btn" type="submit">Войти</button>
     </form>
+<!-- PAGE 2 -->
+    <ul class="products">
+        <li class="products__item">
+            <div class="product-card">
+                <div class="product-card__img-wrapper">
+                    <span class="product-card__label">Товар года!</span>
+                    <img class="product-card__img" src="img/product.jpg" width="500" height="500" alt="Изображение товара">
+                </div>
+                <div class="product-card__inner">
+                    <h3 class="product-card__title">Название цветка</h3>
+                    <p class="product-card__text">Генерация рыбатекста происходит довольно просто: есть несколько
+                        фиксированных наборов фраз и словочетаний, из которых в опредёленном порядке формируются
+                        предложения. Предложения складываются в абзацы — и вы наслаждетесь очередным бредошедевром.</p>
+                    <div class="product-card__btns">
+                        <a class="product-card__btn product-card__btn--braun" href="#">Купить в один клик</a>
+                        <a class="product-card__btn" href="#">В избранное</a>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="products__item">
+            <div class="product-card">
+                <div class="product-card__img-wrapper">
+                    <span class="product-card__label product-card__label--sale">Скидка!</span>
+                    <img class="product-card__img" src="img/product.jpg" width="500" height="500" alt="Изображение товара">
+                </div>
+                <div class="product-card__inner">
+                    <h3 class="product-card__title">Название цветка</h3>
+                    <p class="product-card__text">Генерация рыбатекста происходит довольно просто: есть несколько
+                        фиксированных наборов фраз и словочетаний, из которых в опредёленном порядке формируются
+                        предложения. Предложения складываются в абзацы — и вы наслаждетесь очередным бредошедевром.</p>
+                    <div class="product-card__btns">
+                        <a class="product-card__btn product-card__btn--braun" href="#">Купить в один клик</a>
+                        <a class="product-card__btn" href="#">В избранное</a>
+                    </div>
+                </div>
+            </div>
+        </li>
+    </ul>
+
 </body>
 
 </html>
